--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   provider: ^6.0.3
   built_value_generator: ^8.4.3
   http: ^0.13.5
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
